show deletions correctly when zoomed out a bit on alignments tracks

--- a/main.css
+++ b/main.css
@@ -270,6 +270,10 @@ span.base {
 .base_g {
     background-color: #d5bb04;
 }
+.mismatch.base_deletion {
+    background-color: black;
+    color: white;
+}
 
 div.sequence_blur {
     background: none;
